--- a/productos.html
+++ b/productos.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <title>Productos - Barbería Alura</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="Productos.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
